@@ -5,6 +5,7 @@
 * Added unit tests for older Netscape versions (updated sniffing code).
 * Added unit tests for IRIX OS version detection (updated sniffing code).
 * Added unit test for Netscape 9.1 (updated sniffing code).
+* Added unit tests for Dolphin 2.0, one on Bada (updated sniffing code).
 
 
 --- CHANGES SINCE UASNIFFER 0.3 ----------------------------------------------
